--- a/README.Rmd
+++ b/README.Rmd
@@ -133,7 +133,7 @@ Besides the basic methods shared by all `R6 class` objects,
 - `get_status()` - returns list with details of current status of the object,
 - `get_data_info()` - returns list with information of the basic source data structure,
 - `get_freqtables()` - returns frequency tables for each variable
-- `compute_scores()` - compute score in one of the built-in standard scales of custom one. Currently, there are built-in definitions of following:
+- `compute_scores()` - compute score in one of the built-in standard scales or a custom one. Currently, there are built-in definitions of following:
   - *sten* (M = 5.5, SD = 2, min = 1, max = 10),
   - *stanine* (M = 5, SD = 2, min = 1, max = 9),
   - *tanine* (M = 50, SD = 10, min = 1, max = 100),
