--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 Sys.setenv(LANGUAGE='en')
 ```
 
-# stenR
+# stenR <img src='man/figures/logo.png' align="right" width="200" style="float:right; width:200px !important;"/>
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-blue.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
