--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ Sys.setenv(LANGUAGE='en')
 [![codecov](https://codecov.io/gh/StatisMike/stenR/branch/master/graph/badge.svg?token=H62VR1J454)](https://codecov.io/gh/StatisMike/stenR)
 <!-- badges: end -->
 
-`stenR` is a package tailored mainly for creators of psychological questionnaires,
+`stenR` is a package tailored mainly for users and creators of psychological questionnaires,
 though other social science researchers and survey authors can benefit greatly
 from it.
 
@@ -32,7 +32,11 @@ work pattern:
 
 - create frequency table and compute Z-score corresponding to each raw score
 - create score table using some standard scale.
-- provide external raw score to be recalculated to standardized scale.
+- provide external raw score to be recalculated to standardized scale
+
+Additionally, it introduces compatible with rest of the workflow helper
+functions to preprocess data: from user answers on each item, to summarized
+scales/factors score.
 
 ## Installation
 
@@ -113,4 +117,51 @@ normalize_score(HEXACO_60$HEX_A,
                 table = ScoreTable(simulated_ft, STEN),
                 "sten") |>
   summary()
+```
+
+## Data preprocessing
+
+Workflow above assumes that your data is already preprocessed, and summarized
+score for each construct is presented to the functions.
+
+When working with actual data, it is most commonly presented as answers
+to individual items. It is then needed to summarize them into distinct
+scales or factors. Author may also chose to handle `NA`s in some way, and
+commonly there are items in need of reversing before summarizing into scale score.
+
+All of these steps can be achieved using `ScaleSpec` objects with `sum_items_to_scale` function.
+
+```{r SLCS_preprocess}
+# Answers per item: Self-liking self-competence scale
+# (dataset included within package)
+head(SLCS)
+
+# Scale specification for each of subscales and general score:
+## Self-Liking specification
+SL_spec <- ScaleSpec(
+  name = "SL",
+  item_names = paste("SLCS", c(1, 3, 5, 6, 7, 9, 11, 15), sep = "_"),
+  reverse = paste("SLCS", c(1, 6, 7, 15), sep = "_"),
+  min = 1,
+  max = 5)
+
+## Self-Competence specification
+SC_spec <- ScaleSpec(
+  name = "SC",
+  item_names = paste("SLCS", c(2, 4, 8, 10, 12, 13, 14, 16), sep = "_"),
+  reverse = paste("SLCS", c(8, 10, 13), sep = "_"),
+  min = 1,
+  max = 5)
+
+## General Score specification
+GS_spec <- ScaleSpec(
+  name = "GS",
+  item_names = paste("SLCS", 1:16, sep = "_"),
+  reverse = paste("SLCS", c(1, 6, 7, 8, 10, 13, 15), sep = "_"),
+  min = 1, 
+  max = 5)
+
+# Sum the data
+SLCS_summed <- sum_items_to_scale(SLCS, SL_spec, SC_spec, GS_spec, id_col = "user_id")
+head(SLCS_summed)
 ```
