changed `id_col` argument to `retain`

--- a/README.Rmd
+++ b/README.Rmd
@@ -162,6 +162,6 @@ GS_spec <- ScaleSpec(
   max = 5)
 
 # Sum the data
-SLCS_summed <- sum_items_to_scale(SLCS, SL_spec, SC_spec, GS_spec, id_col = "user_id")
+SLCS_summed <- sum_items_to_scale(SLCS, SL_spec, SC_spec, GS_spec, retain = c("user_id", "sex", "age"))
 head(SLCS_summed)
 ```
