--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ library(stenR)
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-blue.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-[![codecov](https://codecov.io/gh/StatisMike/stenR/branch/master/graph/badge.svg?token=H62VR1J454)](https://codecov.io/gh/StatisMike/stenR)
+[![codecov](https://codecov.io/gh/StatisMike/stenR/branch/master/graph/badge.svg?token=H62VR1J454)](https://app.codecov.io/gh/StatisMike/stenR)
 <!-- badges: end -->
 
 `stenR` is a package tailored mainly for users and creators of psychological questionnaires,
